@@ -1,5 +1,10 @@
 2018-01-20  Bruno Haible  <bruno@clisp.org>
 
+	Fix compilation error in C++ mode (regression from 2017-12-04).
+	* modules/regexp/regexi.c (REGEXP-EXEC): Add necessary casts.
+
+2018-01-20  Bruno Haible  <bruno@clisp.org>
+
 	syscalls: Make this module work with DYNAMIC_MODULES.
 	Fixes bug#725.
 	* modules/syscalls/calls.c (bogomips): New function, moved here from
